# headlines_solution

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
bot/: config.py  logger.py
bot/handlers/: admin_handler.py  base_handler.py  headlines_handler.py  start_handler.py
bot/keyboards/: admin_keyboards.py  base_keyboards.py  headlines_keyboard.py
bot/middleware/: authorization.py
bot/operations/: auto_pars.py  check_privileges.py  generate_text_headlines.py
database/: database.py  models.py  session.py
database/repositories/: admins_repo.py  bot_config_repo.py  headlines_repo.py  news_sources_repo.py  source_subscriptions_repo.py  users_repo.py
parsing/: pars news.py  pars_news.py
